// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom compressor 1`] = `
{
  "descriptor": {
    "adapter": {
      "name": "test-adapter",
      "version": "7.7.7",
    },
    "author": {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Statoscope extension for collecting compressed resource sizes",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-extension-compressed",
    "version": "8.8.8",
  },
  "payload": {
    "compilations": [
      {
        "id": "foo-compilation",
        "resources": [
          {
            "id": "foo-resource",
            "size": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          {
            "id": "bar-resource",
            "size": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
      {
        "id": "bar-compilation",
        "resources": [
          {
            "id": "foo-resource",
            "size": {
              "compressor": {
                "name": "custom-compressor",
                "version": "7.7.7",
              },
              "size": 100,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`custom compressor 2`] = `
{
  "calls": [
    [
      "foo-foo-content",
      "foo-resource",
      undefined,
    ],
    [
      "foo-bar-content",
      "bar-resource",
      undefined,
    ],
  ],
  "contexts": [
    {
      "compressor": [MockFunction] {
        "calls": [
          [
            "foo-foo-content",
            "foo-resource",
            undefined,
          ],
          [
            "foo-bar-content",
            "bar-resource",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
    },
    {
      "compressor": [MockFunction] {
        "calls": [
          [
            "foo-foo-content",
            "foo-resource",
            undefined,
          ],
          [
            "foo-bar-content",
            "bar-resource",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
    },
  ],
  "instances": [
    {
      "compressor": [MockFunction] {
        "calls": [
          [
            "foo-foo-content",
            "foo-resource",
            undefined,
          ],
          [
            "foo-bar-content",
            "bar-resource",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
    },
    {
      "compressor": [MockFunction] {
        "calls": [
          [
            "foo-foo-content",
            "foo-resource",
            undefined,
          ],
          [
            "foo-bar-content",
            "bar-resource",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          {
            "type": "return",
            "value": {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
    },
  ],
  "invocationCallOrder": [
    1,
    2,
  ],
  "lastCall": [
    "foo-bar-content",
    "bar-resource",
    undefined,
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "compressor": "custom-compressor",
        "size": 100,
      },
    },
    {
      "type": "return",
      "value": {
        "compressor": "custom-compressor",
        "size": 100,
      },
    },
  ],
}
`;

exports[`custom compressor 3`] = `
{
  "calls": [
    [
      "bar-foo-content",
      "foo-resource",
      undefined,
    ],
  ],
  "contexts": [
    {
      "compressor": [MockFunction] {
        "calls": [
          [
            "bar-foo-content",
            "foo-resource",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": {
              "compressor": {
                "name": "custom-compressor",
                "version": "7.7.7",
              },
              "size": 100,
            },
          },
        ],
      },
    },
  ],
  "instances": [
    {
      "compressor": [MockFunction] {
        "calls": [
          [
            "bar-foo-content",
            "foo-resource",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": {
              "compressor": {
                "name": "custom-compressor",
                "version": "7.7.7",
              },
              "size": 100,
            },
          },
        ],
      },
    },
  ],
  "invocationCallOrder": [
    3,
  ],
  "lastCall": [
    "bar-foo-content",
    "foo-resource",
    undefined,
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "compressor": {
          "name": "custom-compressor",
          "version": "7.7.7",
        },
        "size": 100,
      },
    },
  ],
}
`;

exports[`preset compressor gzip 1`] = `
{
  "descriptor": {
    "adapter": {
      "name": "test-adapter",
      "version": "7.7.7",
    },
    "author": {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Statoscope extension for collecting compressed resource sizes",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-extension-compressed",
    "version": "8.8.8",
  },
  "payload": {
    "compilations": [
      {
        "id": "foo-compilation",
        "resources": [
          {
            "id": "foo-resource",
            "size": {
              "compressor": "gzip",
              "meta": {
                "level": 6,
              },
              "size": 33,
            },
          },
          {
            "id": "bar-resource",
            "size": {
              "compressor": "gzip",
              "meta": {
                "level": 6,
              },
              "size": 38,
            },
          },
        ],
      },
      {
        "id": "bar-compilation",
        "resources": [
          {
            "id": "foo-resource",
            "size": {
              "compressor": "gzip",
              "meta": {
                "level": 6,
              },
              "size": 48,
            },
          },
          {
            "id": "bar-resource",
            "size": {
              "compressor": "gzip",
              "meta": {
                "level": 6,
              },
              "size": 51,
            },
          },
        ],
      },
    ],
  },
}
`;
